Resolved a few layout issues for small devices, resolved issue where iOS devices do not get 'game:ended' messaged when game ends (so handling 'not found' event similarly), now redirecting player to login if game ends.

--- a/public/styles/_htyi/playerview.scss
+++ b/public/styles/_htyi/playerview.scss
@@ -27,7 +27,7 @@
   #tweet-submission {
     float: none;
     max-width: 375px;
-    width: 375px;
+    // width: 375px;
     margin: 0 auto;
 
   }
@@ -36,7 +36,6 @@
     max-width: 375px;
     width: 375px;
     margin: 0 auto;
-    
   }
 
   #debugging {
