--- a/public/styles/core.css
+++ b/public/styles/core.css
@@ -1538,7 +1538,6 @@ body .player-form {
 .body.htyi.player #tweet-submission {
   float: none;
   max-width: 375px;
-  width: 375px;
   margin: 0 auto; }
 
 .body.htyi.player #vote-submission {
